(Megadropdown): Increase z-index to make sure it displays above all other elements.

--- a/htdocs/sass/nav/custom.scss
+++ b/htdocs/sass/nav/custom.scss
@@ -20,7 +20,7 @@
     border: 1px solid #dcdcdc;
     position: absolute;
     top: 45px;
-    z-index: 100;
+    z-index: 10000;
     ul {
         margin-top: 1em;
         li {
